java-confluence-wiki/java-confluence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-confluence-wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-confluence-wiki
  template:
    metadata:
      labels:
        app: java-confluence-wiki
    spec:
      containers:
      - name: java-confluence-wiki
        image: wolihi/java-confluence-wiki:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8090
        ports:
        - containerPort: 8091
        volumeMounts:
        - name: confluence-run-data
          mountPath: /var/atlassian/confluence
        - name: config-volume
          mountPath: /opt/atlassian/confluence/conf/
          subPath: server.xml
      volumes:
      - name: confluence-run-data
        persistentVolumeClaim:
          claimName: java-confluence-run-pvc
      - name: config-volume
        configMap:
          name: tomcat-config
