java-confluence-wiki/java-confluence-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-confluence-nodeport-svc
spec:
  type: NodePort
  ports:
   - port: 8090
     protocol: TCP
     targetPort: 8090
     name: java-confluence-nodeport-svc
     nodePort: 31791
  selector:
    #app: mysql-0
     statefulset.kubernetes.io/pod-name: java-confluence-wiki-0
