java-confluence-wiki/java-confluence-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-confluence-wiki-svc
  namespace: default
spec:
  ports:
  - name: port
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: java-confluence-wiki-0
  #type: NodePort
