java-confluence-wiki/jira-confluence-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-jira-svc
spec:
  type: NodePort
  ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
     name: java-jira-svc
     nodePort: 31791
  selector:
    #app: mysql-0
     statefulset.kubernetes.io/pod-name: java-confluence-wiki-0
