java-confluence-wiki/java-confluence-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-java-confluence-wiki
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.mouthmelt.com
    http:
      paths:
      - backend:
          serviceName: java-confluence-wiki-svc
          servicePort: 8090
        path: /
  - host: mouthmelt.com
    http:
      paths:
      - backend:
          serviceName: java-confluence-wiki-svc
          servicePort: 8090
        path: /
